--- a/src/scss/fonts.scss
+++ b/src/scss/fonts.scss
@@ -8,15 +8,6 @@
 }
 
 @font-face {
-  font-style: italic;
-  font-weight: 400;
-  font-family: "Proxima Nova";
-
-  font-display: swap;
-  src: url("../fonts/ProximaNova-RegularIt.woff") format("woff");
-}
-
-@font-face {
   font-style: normal;
   font-weight: 300;
   font-family: "Proxima Nova";
@@ -41,4 +32,45 @@
 
   font-display: swap;
   src: url("../fonts/ProximaNova-Bold.woff") format("woff");
+}
+
+// Jost
+@font-face {
+  font-style: normal;
+  font-weight: 400;
+  font-family: "Jost";
+
+  font-display: swap;
+  src: url("../fonts/Jost-Regular.woff2") format("woff2");
+  src: url("../fonts/Jost-Regular.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 500;
+  font-family: "Jost";
+
+  font-display: swap;
+  src: url("../fonts/Jost-Medium.woff2") format("woff2");
+  src: url("../fonts/Jost-Medium.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 600;
+  font-family: "Jost";
+
+  font-display: swap;
+  src: url("../fonts/Jost-SemiBold.woff2") format("woff2");
+  src: url("../fonts/Jost-SemiBold.woff") format("woff");
+}
+
+@font-face {
+  font-style: normal;
+  font-weight: 800;
+  font-family: "Jost";
+
+  font-display: swap;
+  src: url("../fonts/Jost-ExtraBold.woff2") format("woff2");
+  src: url("../fonts/Jost-ExtraBold.woff") format("woff");
 }
