--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,4 +3,10 @@
 @import "./mixin.scss";
 @import "./fonts.scss";
 
+@import "./blocks/container.scss";
+@import "./blocks/title.scss";
+@import "./blocks/breadcumbs.scss";
+
 @import "./blocks/page.scss";
+@import "./blocks/page-main.scss";
+
