--- a/src/views/pages/cases.j2
+++ b/src/views/pages/cases.j2
@@ -1,11 +1,13 @@
 {% extends "layout.j2" %}
 
-{% set page = "index" %}
+{% set page = "cases" %}
 
 {% block content %}
   <main class="page-main">
-    <h1>Главная</h1>
-    <a href="./cases.html">Кейсы</a>
+    <div class="container">
+      <h1 class="title">Кейсы</h1>
+      <a href="./case-page.html">Case page</a>
+    </div>
   </main>
 {% endblock content %}
 
