сделал секцию кейса

--- a/src/views/pages/case-page.j2
+++ b/src/views/pages/case-page.j2
@@ -19,6 +19,7 @@
         </ul>
       </div>
     </div>
+    {% include "./blocks/case.j2" %}
     <div class="container">
       <h1 class="title">Страница кейса</h1>
     </div>
