--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,7 +6,9 @@
 @import "./blocks/container.scss";
 @import "./blocks/title.scss";
 @import "./blocks/breadcumbs.scss";
+@import "./blocks/daw-list.scss";
 
 @import "./blocks/page.scss";
 @import "./blocks/page-main.scss";
+@import "./blocks/case.scss";
 
