сделал секцию с подпиской

--- a/src/views/pages/case-page.j2
+++ b/src/views/pages/case-page.j2
@@ -20,6 +20,7 @@
       </div>
     </div>
     {% include "./blocks/case.j2" %}
+    {% include "./blocks/subscribe-section.j2" %}
     <div class="container">
       <h1 class="title">Страница кейса</h1>
     </div>
