--- a/src/scss/blocks/case.scss
+++ b/src/scss/blocks/case.scss
@@ -1,5 +1,10 @@
 .case {
   margin-bottom: 50px;
+  margin-top: 35px;
+
+  @media (min-width: $tablet-width) {
+    margin-top: 50px;
+  }
 }
 .case__container {
 }
