--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,11 +4,15 @@
 @import "./fonts.scss";
 
 @import "./blocks/container.scss";
+@import "./blocks/button.scss";
 @import "./blocks/title.scss";
 @import "./blocks/breadcumbs.scss";
 @import "./blocks/daw-list.scss";
+@import "./blocks/form.scss";
+
 
 @import "./blocks/page.scss";
 @import "./blocks/page-main.scss";
 @import "./blocks/case.scss";
+@import "./blocks/subscribe-section.scss";
 
