--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,10 +9,13 @@
 @import "./blocks/breadcumbs.scss";
 @import "./blocks/daw-list.scss";
 @import "./blocks/form.scss";
+@import "./blocks/nav.scss";
+@import "./blocks/logo.scss";
 
 
 @import "./blocks/page.scss";
 @import "./blocks/page-main.scss";
+@import "./blocks/page-footer.scss";
 @import "./blocks/case.scss";
 @import "./blocks/subscribe-section.scss";
 
