--- a/src/views/layout.j2
+++ b/src/views/layout.j2
@@ -16,6 +16,7 @@
 
   {% block modal %}{% endblock %}
 
+  <script src="./js/burger.min.js"></script>
   {% block js %}{% endblock %}
 </body>
 </html>
