--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -13,6 +13,7 @@
 @import "./blocks/nav.scss";
 @import "./blocks/logo.scss";
 @import "./blocks/burger.scss";
+@import "./blocks/menu.scss";
 
 
 @import "./blocks/page.scss";
