--- a/src/views/layout.j2
+++ b/src/views/layout.j2
@@ -17,6 +17,7 @@
   {% block modal %}{% endblock %}
 
   <script src="./js/burger.min.js"></script>
+  <script src="./js/menu.min.js"></script>
   {% block js %}{% endblock %}
 </body>
 </html>
