--- a/src/views/pages/cases.j2
+++ b/src/views/pages/cases.j2
@@ -5,6 +5,18 @@
 {% block content %}
   <main class="page-main">
     <div class="container">
+      <div class="breadcumbs">
+        <ul class="breadcumbs__list">
+          <li class="breadcumbs__item">
+            <a class="breadcumbs__link" href="./index.html">Главная</a>
+          </li>
+          <li class="breadcumbs__item">
+            <span class="breadcumbs__link breadcumbs__link--current">Кейсы</span>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="container">
       <h1 class="title">Кейсы</h1>
       <a href="./case-page.html">Case page</a>
     </div>
