сделал карточку кейса

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,4 +22,6 @@
 @import "./blocks/page-footer.scss";
 @import "./blocks/case.scss";
 @import "./blocks/subscribe-section.scss";
+@import "./blocks/case-card.scss";
+@import "./blocks/completed-projects.scss";
 
