сделал 8 карточек кейсов, осталось 2

--- a/src/scss/blocks/case-card.scss
+++ b/src/scss/blocks/case-card.scss
@@ -86,6 +86,7 @@
   line-height: 140%;
   background-color: $bg2-color;
   color: $grey-color;
+  text-transform: uppercase;
 }
 .case-card__open-case-button {
   display: inline-block;
