--- a/src/views/blocks/completed-projects.j2
+++ b/src/views/blocks/completed-projects.j2
@@ -5,35 +5,36 @@
     </div>
     <ul class="completed-projects__list">
       <li class="completed-projects__item">
-        {% include "./case-card.j2" %}
+        {% include "./case-cards/case-card-otkritie.j2" %}
       </li>
       <li class="completed-projects__item">
-        {% include "./case-card.j2" %}
+        {% include "./case-cards/case-card-rkif.j2" %}
       </li>
       <li class="completed-projects__item">
-        {% include "./case-card.j2" %}
+        {% include "./case-cards/case-card-daf.j2" %}
       </li>
       <li class="completed-projects__item">
-        {% include "./case-card.j2" %}
+        {% include "./case-cards/case-card-ascott.j2" %}
       </li>
       <li class="completed-projects__item">
-        {% include "./case-card.j2" %}
+        {% include "./case-cards/case-card-printprof.j2" %}
       </li>
       <li class="completed-projects__item">
-        {% include "./case-card.j2" %}
+        {% include "./case-cards/case-card-logixpro.j2" %}
       </li>
       <li class="completed-projects__item">
-        {% include "./case-card.j2" %}
+        {% include "./case-cards/case-card-mrgroup.j2" %}
       </li>
       <li class="completed-projects__item">
-        {% include "./case-card.j2" %}
+        {% include "./case-cards/case-card-energia.j2" %}
       </li>
       <li class="completed-projects__item">
-        {% include "./case-card.j2" %}
+        {% include "./case-cards/case-card-stilniekuhni.j2" %}
       </li>
       <li class="completed-projects__item">
-        {% include "./case-card.j2" %}
+        {% include "./case-cards/case-card-neometria.j2" %}
       </li>
+
     </ul>
   </div>
 </section>
