--- a/src/views/blocks/completed-projects.j2
+++ b/src/views/blocks/completed-projects.j2
@@ -34,7 +34,12 @@
       <li class="completed-projects__item">
         {% include "./case-cards/case-card-neometria.j2" %}
       </li>
-
+      <li class="completed-projects__item">
+        {% include "./case-cards/case-card-osnova.j2" %}
+      </li>
+      <li class="completed-projects__item">
+        {% include "./case-cards/case-card-trexmer.j2" %}
+      </li>
     </ul>
   </div>
 </section>
