сделал лэйаут для карточек кейсов

--- a/src/views/pages/cases.j2
+++ b/src/views/pages/cases.j2
@@ -27,5 +27,7 @@
 {% endblock content %}
 
 {% block js %}
+  <script src="./js/macy.min.js"></script>
+  <script src="./js/cases.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
