--- a/src/scss/blocks/case-card.scss
+++ b/src/scss/blocks/case-card.scss
@@ -28,8 +28,8 @@
 .case-card__date {
   margin: 0;
   padding: 0;
-  font-size: 16px;
-  line-height: 19px;
+  font-size: 14px;
+  line-height: calc(19 / 16) * 100%;
   color: $grey-color;
 
   &:first-of-type {
@@ -37,6 +37,10 @@
       content: " - ";
       margin-right: 5px;
     }
+  }
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
   }
 }
 .case-card__logo {
