сделал верхушку about

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -24,4 +24,6 @@
 @import "./blocks/subscribe-section.scss";
 @import "./blocks/case-card.scss";
 @import "./blocks/completed-projects.scss";
+@import "./blocks/feature.scss";
+@import "./blocks/about.scss";
 
