--- a/src/views/blocks/case-cards/case-card.j2
+++ b/src/views/blocks/case-cards/case-card.j2
@@ -8,7 +8,7 @@
       <img class="case-card__logo" src="@img/{{ card.logo.url }}" alt="{{ card.logo.alt }}" width="{{ card.logo.width }}" height="{{ card.logo.height }}">
     </div>
     <div class="case-card__main">
-      <a class="case-card__title-link" href="./case.html">
+      <a class="case-card__title-link" href="./case-page.html">
         <h3 class="case-card__title">{{ card.title | safe}}</h3>
       </a>
       <ul class="case-card__list">
