--- a/src/scss/blocks/button.scss
+++ b/src/scss/blocks/button.scss
@@ -7,7 +7,6 @@ $button-height: 47;
   align-items: center;
   background-color: $button-color;
   color: #fff;
-  text-decoration: underline;
   margin: 0;
   padding: 0;
   border: none;
@@ -17,16 +16,18 @@ $button-height: 47;
   line-height: 17px;
   max-width: 290px;
 
-  transition: color 0.5s ease;
+  transition: all 0.3s ease;
 
   &::after {
     content: "";
     position: absolute;
     top: 0;
     bottom: 0;
-    right: 0;
-    width: calc($button-height / 2.9375) +px;
-    transform: translateX(calc($button-height / 2.9375 - 1) +px);
+    right: 1px;
+    width: calc($button-height / 2.5) +px;
+    transform: translateX(calc($button-height / 2.9375 ) +px);
+    transition: all 0.3s ease;
+    z-index: 1;
 
     background-image: url("@img/button-triangle.svg");
     background-size: cover;
@@ -35,6 +36,13 @@ $button-height: 47;
   }
 
   &:hover {
-    color: $black-color;
+    color: $button-color;
+    background-color: #fff;
+    &::after {
+      background-image: url("@img/button-triangle-white.svg");
+    }
+  }
+  &:active {
+    opacity: 0.7;
   }
 }
