сделал секцию с командой

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,4 +26,5 @@
 @import "./blocks/completed-projects.scss";
 @import "./blocks/feature.scss";
 @import "./blocks/about.scss";
+@import "./blocks/team.scss";
 
