поправил нижний марджин у страховки для мобилки

--- a/src/scss/blocks/team.scss
+++ b/src/scss/blocks/team.scss
@@ -94,6 +94,7 @@
   flex-direction: column;
   gap: 20px;
   padding-left: 73px;
+  margin-bottom: 15px;
 
   @media (min-width: $tablet-width) {
     margin-bottom: 40px;
