--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -14,6 +14,8 @@
 @import "./blocks/logo.scss";
 @import "./blocks/burger.scss";
 @import "./blocks/menu.scss";
+@import "./blocks/next-link.scss";
+@import "./blocks/show-more.scss";
 
 
 @import "./blocks/page.scss";
@@ -27,4 +29,7 @@
 @import "./blocks/feature.scss";
 @import "./blocks/about.scss";
 @import "./blocks/team.scss";
+@import "./blocks/tag.scss";
+@import "./blocks/blog-card.scss";
+@import "./blocks/blog.scss";
 
