--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -32,4 +32,5 @@
 @import "./blocks/tag.scss";
 @import "./blocks/blog-card.scss";
 @import "./blocks/blog.scss";
+@import "./blocks/actual-news.scss";
 
