--- a/src/views/pages/blog.j2
+++ b/src/views/pages/blog.j2
@@ -18,6 +18,7 @@
     </div>
 
     {% include "./blocks/blog.j2" %}
+    {% include "./blocks/actual-news.j2" %}
     {% include "./blocks/subscribe-section.j2" %}
   </main>
 {% endblock content %}
