почти доделал статью блога

--- a/src/views/blocks/blog.j2
+++ b/src/views/blocks/blog.j2
@@ -49,7 +49,9 @@
                     <li class="tag">системы хранения данных</li>
                     <li class="tag">СУБД</li>
                   </ul>
-                  <a class="blog-card__read-link next-link" href="./blog-page.html">Читать статью</a>
+                  <a class="blog-card__read-link next-link" href="./blog-page.html">
+                    <span class="next-link__text">Читать статью</span>
+                  </a>
                 </div>
               </div>
             </div>
@@ -80,7 +82,9 @@
                     <li class="tag">системы хранения данных</li>
                     <li class="tag">СУБД</li>
                   </ul>
-                  <a class="blog-card__read-link next-link" href="./blog-page.html">Читать статью</a>
+                  <a class="blog-card__read-link next-link" href="./blog-page.html">
+                    <span class="next-link__text">Читать статью</span>
+                  </a>
                 </div>
               </div>
             </div>
