--- a/src/scss/blocks/next-link.scss
+++ b/src/scss/blocks/next-link.scss
@@ -1,16 +1,43 @@
 .next-link {
-  font-size: 14px;
-  line-height: 17px;
-  text-decoration: underline;
-
-  color: $blue-color;
-
-  transition: color 0.3s ease;
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  cursor: pointer;
 
   &:hover {
-    color: $button-color;
+    & .next-link__text {
+      color: $button-color;
+    }
+    & .next-link__icon {
+      fill: $button-color;
+    }
   }
   &:active {
     opacity: 0.7;
+  }
+}
+
+.next-link__text {
+  font-size: 14px;
+  line-height: 17px;
+  color: $blue-color;
+  text-decoration: underline;
+  transition: color 0.3s ease;
+}
+.next-link__icon {
+  margin-left: 15px;
+  fill: $blue-color;
+  transition: fill 0.3s ease;
+}
+.next-link--hidden {
+  @media (max-width: $max-mobile-width) {
+    display: none;
+  }
+}
+.next-link--back {
+  & .next-link__icon {
+    margin-left: 0;
+    margin-right: 15px;
+    transform: rotate(180deg);
   }
 }
