--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -33,4 +33,5 @@
 @import "./blocks/blog-card.scss";
 @import "./blocks/blog.scss";
 @import "./blocks/actual-news.scss";
+@import "./blocks/blog-article.scss";
 
