--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -34,4 +34,5 @@
 @import "./blocks/blog.scss";
 @import "./blocks/actual-news.scss";
 @import "./blocks/blog-article.scss";
+@import "./blocks/popular-articles.scss";
 
