--- a/src/views/blocks/case.j2
+++ b/src/views/blocks/case.j2
@@ -86,7 +86,7 @@
         </div>
       </div>
       <div class="case__footer section__footer">
-        <a class="case__link case__link--back case__link--hidden" href="#!">
+        <a class="case__link case__link--back case__link--hidden" href="./cases.html">
           <svg class="case__link-icon" width="10" height="15" viewBox="0 0 10 15">
             <use xlink:href="img/sprite.svg#next-arrow-icon"></use>
           </svg>
