--- a/src/views/pages/blog-page.j2
+++ b/src/views/pages/blog-page.j2
@@ -21,11 +21,12 @@
     </div>
 
     {% include "./blocks/blog-article.j2" %}
+    {% include "./blocks/popular-articles.j2" %}
     {% include "./blocks/subscribe-section.j2" %}
   </main>
 {% endblock content %}
 
 {% block js %}
-  <script src="./js/blog.min.js"></script>
+  <script src="./js/popular-articles.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
