почти доделал страницу контактов

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -35,4 +35,5 @@
 @import "./blocks/actual-news.scss";
 @import "./blocks/blog-article.scss";
 @import "./blocks/popular-articles.scss";
+@import "./blocks/contacts.scss";
 
