добавил маску телефона на страницу контактов

--- a/src/views/pages/contacts.j2
+++ b/src/views/pages/contacts.j2
@@ -64,5 +64,7 @@
 {% endblock content %}
 
 {% block js %}
+  <script src="./js/imask.js"></script>
+  <script src="./js/mask.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
