--- a/src/views/pages/contacts.j2
+++ b/src/views/pages/contacts.j2
@@ -18,7 +18,7 @@
     </div>
 
     <section class="contacts">
-      <div class="container">
+      <div class="contacts__container container">
         <div class="contacts__content">
           <div class="contacts__contacts">
             <h1 class="contacts__title title">Контакты</h1>
@@ -28,7 +28,7 @@
                 <a class="contacts__item contacts__item--mail" href="mailto:mail@info@exasystems.ru">info@exasystems.ru</a>
               </div>
               <p class="contacts__item contacts__item--time">Работаем с 9 до 18 в будни</p>
-              <p class="contacts__item contacts__item--address">Москва, ул. 50 лет Октября, дом 4, офис 104 «А»</p>
+              <p class="contacts__item contacts__item--address">Москва, ул. 50 лет Октября, дом 4, офис 104&nbsp;«А»</p>
             </div>
           </div>
           <div class="contacts__questions">
