сделал блок сертифкатов

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -36,4 +36,5 @@
 @import "./blocks/blog-article.scss";
 @import "./blocks/popular-articles.scss";
 @import "./blocks/contacts.scss";
+@import "./blocks/certificates.scss";
 
