--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -4,8 +4,10 @@
 
 {% block content %}
   <main class="page-main">
-    <h1>Главная</h1>
-    <a href="./cases.html">Кейсы</a>
+    <div class="container">
+      <h1>Главная</h1>
+      <a href="./certificates.html">Сертификаты</a>
+    </div>
   </main>
 {% endblock content %}
 
