доделал блок our-advantages

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -37,4 +37,5 @@
 @import "./blocks/popular-articles.scss";
 @import "./blocks/contacts.scss";
 @import "./blocks/certificates.scss";
+@import "./blocks/our-advantages.scss";
 
