сделал блок другие проекты

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -26,6 +26,7 @@
 @import "./blocks/subscribe-section.scss";
 @import "./blocks/case-card.scss";
 @import "./blocks/completed-projects.scss";
+@import "./blocks/other-projects.scss";
 @import "./blocks/feature.scss";
 @import "./blocks/about.scss";
 @import "./blocks/team.scss";
