сделал страничку с отзывами

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -39,4 +39,5 @@
 @import "./blocks/contacts.scss";
 @import "./blocks/certificates.scss";
 @import "./blocks/our-advantages.scss";
+@import "./blocks/reviews.scss";
 
