--- a/src/views/pages/index.j2
+++ b/src/views/pages/index.j2
@@ -7,6 +7,7 @@
     <div class="container">
       <h1>Главная</h1>
       <a href="./certificates.html">Сертификаты</a>
+      <a href="./reviews.html">Отзывы</a>
     </div>
   </main>
 {% endblock content %}
