--- a/src/views/pages/reviews.j2
+++ b/src/views/pages/reviews.j2
@@ -20,7 +20,9 @@
     <section class="reviews">
       <div class="container">
         <div class="reviews__content">
-          <h1 class="reviews__title title">Отзывы</h1>
+          <div class="reviews__header">
+            <h1 class="reviews__title title">Отзывы</h1>
+          </div>
           <ul class="reviews__list reviews__list--video">
             <li class="reviews__item">
               <div class="reviews__video-review">
