--- a/src/scss/blocks/completed-projects.scss
+++ b/src/scss/blocks/completed-projects.scss
@@ -1,10 +1,12 @@
 .completed-projects {
   padding: 15px 0;
   background-color: $bg2-color;
+  margin-bottom: 30px;
 
   @media (min-width: $desktop-width) {
     padding: 45px 0;
-    padding-bottom: 120px;
+    padding-bottom: 110px;
+    margin-bottom: 75px;
   }
 }
 .completed-projects__content {
