--- a/src/views/pages/case-page.j2
+++ b/src/views/pages/case-page.j2
@@ -28,5 +28,8 @@
 {% block js %}
   <script src="./js/macy.min.js"></script>
   <script src="./js/other-projects.min.js"></script>
+  <script src="./js/pristine.min.js"></script>
+  <script src="./js/imask.js"></script>
+  <script src="./js/subscribe-form.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
