--- a/src/views/blocks/subscribe-section.j2
+++ b/src/views/blocks/subscribe-section.j2
@@ -15,11 +15,11 @@
       <form class="subscribe-section__form form" action="https://echo.htmlacademy.ru" method="get">
         <label class="form__label">
           <span class="form__label-text">Ваше имя</span>
-          <input class="form__field" type="text" id="client-name" name="client-name" placeholder="Введите ваше имя" required>
+          <input class="form__field" type="text" id="client-name" name="client-name" placeholder="Введите ваше имя" required data-pristine-required-message="Обязательно к заполнению">
         </label>
         <label class="form__label">
           <span class="form__label-text">Ваш e-mail</span>
-          <input class="form__field" type="mail" id="subscribe-mail" name="subscribe-mail" placeholder="E-mail" required>
+          <input class="form__field" type="email" id="subscribe-mail" name="subscribe-mail" placeholder="E-mail" required data-pristine-required-message="Обязательно к заполнению" data-pristine-email-message="Неправильный формат e-mail">
         </label>
         <button class="button form__submit-button">Отправить заявку</button>
       </form>
