--- a/src/views/pages/blog-page.j2
+++ b/src/views/pages/blog-page.j2
@@ -27,6 +27,9 @@
 {% endblock content %}
 
 {% block js %}
+  <script src="./js/pristine.min.js"></script>
+  <script src="./js/imask.js"></script>
+  <script src="./js/subscribe-form.min.js"></script>
   <script src="./js/popular-articles.min.js"></script>
   <script src="./js/main.min.js"></script>
 {% endblock %}
