--- a/src/views/pages/contacts.j2
+++ b/src/views/pages/contacts.j2
@@ -43,7 +43,7 @@
                 <span class="contacts__label-text form__label-text">Ваш телефон</span>
                 <input class="form__field" type="phone" id="contacts-phone" name="contacts-phone" placeholder="+7 (999) 999-99-99" required data-pristine-required-message="Обязательно к заполнению">
               </label>
-              <button class="button form__submit-button">Отправить заявку</button>
+              <button class="button form__submit-button">Получить консультацию</button>
             </form>
           </div>
         </div>
