--- a/src/scss/blocks/form.scss
+++ b/src/scss/blocks/form.scss
@@ -22,6 +22,8 @@
   border: none;
   background-color: #ebf3f8;
 
+  box-shadow: inset 1px 1px 0px rgba(0, 0, 0, 0.15);
+
   &:hover,
   &:focus {
     outline: 2px solid $bg-color;
