--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,7 @@
 @import "./blocks/menu.scss";
 @import "./blocks/next-link.scss";
 @import "./blocks/show-more.scss";
+@import "./blocks/modal.scss";
 
 
 @import "./blocks/page.scss";
